force-app/main/default/objects/Donation__c/fields/Charity__c.field-meta.xml
<CustomField>
    <fullName>Charity__c</fullName>
    <label>Charity</label>
    <referenceTo>Charity__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>