force-app/main/default/objects/Donation__c/fields/Donated_Points__c.field-meta.xml
<CustomField>
    <fullName>Donated_Points__c</fullName>
    <label>Donated Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>