force-app/main/default/objects/Donation__c/fields/DonorContact__c.field-meta.xml
<CustomField>
    <fullName>DonorContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DonorContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>