force-app/main/default/objects/Donation__c/fields/Loyalty_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Transaction</label>
    <referenceTo>Loyalty_Transaction__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>