force-app/main/default/objects/Donation__c/validationRules/DonatedPointsCannotAcceptNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>DonatedPointsCannotAcceptNegative</fullName>
    <active>true</active>
    <errorConditionFormula>Donated_Points__c &lt;=0</errorConditionFormula>
    <errorMessage>Donated Points cannot be negative</errorMessage>
</ValidationRule>